@@ -1,3 +1,4 @@
+Performance improvements: don't construct water glasses unless visible
 # 0.00.34 (61278) Feb 13, 2012
 # 0.00.33 (61275) Feb 13, 2012
 Fixed: if a slice is moving toward the pie when the user presses "down" on the numerator, it should turn around and head back to the bucket
